@@ -29,22 +29,23 @@ def indexable(obj):
 
 
 def datehandler(value):
-    # TODO: we might want to handle datetime and time as well;
-    # check the enfold.solr implementation
     if value is None:
         raise AttributeError
     if isinstance(value, str) and not value.endswith('Z'):
         value = DateTime(value)
+
     if isinstance(value, DateTime):
         v = value.toZone('UTC')
         value = '%04d-%02d-%02dT%02d:%02d:%06.3fZ' % (v.year(),
             v.month(), v.day(), v.hour(), v.minute(), v.second())
-    elif isinstance(value, date):
+    elif isinstance(value, datetime):
         # Convert a timezone aware timetuple to a non timezone aware time
         # tuple representing utc time. Does nothing if object is not
         # timezone aware
         value = datetime(*value.utctimetuple()[:7])
         value = '%s.%03dZ' % (value.strftime('%Y-%m-%dT%H:%M:%S'), value.microsecond % 1000)
+    elif isinstance(value, date):
+        value = '%s.000Z' % value.strftime('%Y-%m-%dT%H:%M:%S')
     return value
 
 
@@ -121,6 +122,13 @@ class SolrIndexProcessor(object):
                 msg = 'schema is missing unique key, skipping unindexing of %r'
                 logger.warning(msg, obj)
                 return
+
+            # remove the PathWrapper, otherwise IndexableObjectWrapper fails
+            # to get the UID indexer (for dexterity objects) and the parent 
+            # UID is acquired
+            if hasattr(obj, 'context'):
+                obj = obj.context
+
             data, missing = self.getData(obj, attributes=[uniqueKey])
             prepareData(data)
             if not uniqueKey in data:
