@@ -3,6 +3,8 @@ Changelog
 
 3.1 - unreleased
 ----------------
+    
+- Add datehandler support for python date objects. [jcbrand]
 
 3.0 - 2012-02-06
 ----------------
